@@ -986,6 +986,7 @@
                     <top>-5</top>
                     <height>75</height>
                     <visible>!Skin.HasSetting(DisableStarRating)</visible>
+                    <visible>!Skin.HasSetting(NumericStarRating)</visible>
                     <control type="group">
                         <left>-14</left>
                         <visible>String.IsEmpty(Container($PARAM[id]).ListItem.UserRating)</visible>
@@ -999,6 +1000,32 @@
                         <include content="Object_StarRating">
                             <param name="rating_prop" value="Container($PARAM[id]).ListItem.UserRating" />
                         </include>
+                    </control>
+                </control>
+                <control type="group">
+                    <top>-5</top>
+                    <height>75</height>
+                    <visible>!Skin.HasSetting(DisableStarRating)</visible>
+                    <visible>Skin.HasSetting(NumericStarRating)</visible>
+                    <control type="group">
+                        <left>-14</left>
+                        <top>24</top>
+                        <visible>!String.IsEmpty(Container($PARAM[id]).ListItem.Rating)</visible>
+                        <control type="image">
+                            <width>64</width>
+                            <height>64</height>
+                            <texture colordiffuse="main_fg_100">flags/star10.png</texture>
+                        </control>
+                        <control type="label">
+                            <left>61</left>
+                            <textcolor>main_fg_70</textcolor>
+                            <top>19</top>
+                            <width>auto</width>
+                            <height>28</height>
+                            <align>right</align>
+                            <font>font_tiny</font>
+                            <label>$INFO[Container($PARAM[id]).ListItem.Rating,,   ]</label>
+                        </control>
                     </control>
                 </control>
                 <include content="Object_Info_Plot">
