@@ -1,6 +1,7 @@
 0.9.38
 - Re-add extended info button in osd
 - Fix for single PVR info in multiwidget layout
+- Option for numeric star rating
 
 0.9.37
 - Add fake landscape icon to Icon Wall view for square icons
